--- a/index.html
+++ b/index.html
@@ -6,144 +6,157 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body {
-  margin: 0;
-  background: #141414;
-  font-family: Arial, sans-serif;
-  color: #fff;
+:root{
+  --bg:#141414;
+  --green:#00b84f;
+  --green-light:#6aff9c;
+  --violet:#C9A9FF;
+  --yellow:#E0BA30;
 }
 
-.page {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+body{
+  margin:0;
+  background:var(--bg);
+  font-family:Arial,sans-serif;
+  color:#fff;
+}
+
+.page{
+  min-height:100vh;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
 }
 
 /* HEADER */
-.header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 24px;
+.header{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  margin-top:20px;
 }
-.header img {
-  width: 160px;
-  max-width: 70%;
-  margin-bottom: 14px;
-  opacity: .95;
+.header img{
+  width:150px;
+  max-width:80%;
+  margin-bottom:12px;
 }
-h1 {
-  color: #9effa0;
-  margin: 0;
-  font-weight: 600;
+h1{
+  color:#9effa0;
+  margin:0;
+  font-weight:600;
+  text-align:center;
 }
-.subtitle {
-  color: #C9A9FF;
-  font-style: italic;
-  font-size: 16px;
-  margin: 6px 0 26px;
+.subtitle{
+  color:var(--violet);
+  font-style:italic;
+  font-size:clamp(14px,4vw,16px);
+  margin:6px 0 24px;
 }
 
 /* CONTENEDOR */
-.container {
-  max-width: 760px;
-  width: 100%;
-  padding: 20px;
-  text-align: center;
+.container{
+  max-width:720px;
+  width:100%;
+  padding:16px;
+  text-align:center;
+  box-sizing:border-box;
 }
 
-/* BOTONES MENÚ */
-.menu-btn {
-  width: 100%;
-  max-width: 420px;
-  background: #1e1e1e;
-  border: 1.5px solid #00b84f;
-  border-radius: 12px;
-  padding: 16px;
-  margin: 12px auto;
-  cursor: pointer;
-  color: #fff;
-  font-size: 16px;
-  font-weight: 600;
-  transition: transform .08s ease, background .2s ease;
+/* MENÚ */
+.menu-btn{
+  width:100%;
+  max-width:420px;
+  background:#1e1e1e;
+  border:1.5px solid var(--green);
+  border-radius:12px;
+  padding:16px;
+  margin:12px auto;
+  cursor:pointer;
+  color:#fff;
+  font-size:16px;
+  font-weight:600;
+  transition:transform .08s ease;
 }
-.menu-btn:active { transform: scale(.97); }
+.menu-btn:active{ transform:scale(.97); }
 
 /* SECCIONES */
-.section { display: none; }
+.section{ display:none; }
 
 /* DIGITACIÓN */
-.circle {
-  width: 160px;
-  height: 160px;
-  border-radius: 50%;
-  background: #222;
-  margin: 36px auto 28px;
-  transition: background .1s ease;
+.circle{
+  width:150px;
+  height:150px;
+  border-radius:50%;
+  background:#222;
+  margin:32px auto 24px;
 }
-.circle.on { background: #00b84f; }
-
-/* LET IT BE */
-.progression {
-  display: flex;
-  justify-content: space-between;
-  margin: 24px 0 28px;
-}
-.chord {
-  flex: 1;
-  margin: 0 6px;
-  padding: 14px;
-  border-radius: 12px;
-  background: #222;
-  cursor: pointer;
-}
-.chord.selected { outline: 2px solid #B58CFF; }
-.chord.active { background: #00b84f; color: #000; }
-
-.count {
-  display: flex;
-  justify-content: center;
-  font-size: 48px;
-  margin-bottom: 24px;
-}
-.count span {
-  width: 40px;
-  opacity: .3;
-}
-.count .one { color: #E0BA30; opacity: 1; }
-.count .other { color: orange; opacity: 1; }
+.circle.on{ background:var(--green); }
 
 /* CONTROLES */
-.controls { margin-top: 20px; }
-input[type=range] { width: 100%; }
+.controls{
+  margin:16px auto;
+  max-width:300px;
+}
+input[type=range]{
+  width:100%;
+}
 
 /* BOTONES */
-button.control {
-  background: #00b84f;
-  border: none;
-  border-radius: 12px;
-  padding: 12px 26px;
-  margin: 10px;
-  cursor: pointer;
-  font-size: 15px;
-  transition: transform .08s ease, background .2s ease;
+button.control{
+  background:var(--green);
+  color:#000;
+  border:none;
+  border-radius:12px;
+  padding:12px 26px;
+  margin:10px;
+  cursor:pointer;
+  font-size:15px;
+  font-weight:600;
+  transition:transform .08s ease, background .2s ease;
 }
-button.control:active { transform: scale(.96); }
-button.control.playing { background: #6aff9c; }
+button.control:active{ transform:scale(.96); }
+button.control.playing{ background:var(--green-light); }
 
-@media (max-width:600px){
-  .header img { width: 120px; }
-  .count { font-size: 36px; }
+/* LET IT BE */
+.progression{
+  display:flex;
+  justify-content:space-between;
+  margin:20px 0 24px;
+}
+.chord{
+  flex:1;
+  margin:0 4px;
+  padding:12px 6px;
+  border-radius:10px;
+  background:#222;
+  cursor:pointer;
+  font-size:14px;
+}
+.chord.selected{ outline:2px solid var(--violet); }
+.chord.active{ background:var(--green); color:#000; }
+
+.count{
+  display:flex;
+  justify-content:center;
+  font-size:42px;
+  margin-bottom:20px;
+}
+.count span{
+  width:36px;
+  opacity:.3;
+}
+.count .one{ color:var(--yellow); opacity:1; }
+.count .other{ color:orange; opacity:1; }
+
+@media(max-width:600px){
+  .count{ font-size:34px; }
 }
 </style>
 </head>
 
 <body>
-
 <div class="page">
 
-<!-- HEADER -->
 <div class="header">
   <img src="https://static.wixstatic.com/media/b4a607_0927246f3864402c8d6d2d56723b8bba~mv2.png">
   <h1>Prácticas guiadas – Sesión 3</h1>
@@ -161,7 +174,6 @@ button.control.playing { background: #6aff9c; }
 <div class="container section" id="dig1">
   <h2>Digitación – Ejercicio 1</h2>
   <div class="subtitle">Fórmula 1–2–3–4</div>
-
   <div class="circle" id="circle1"></div>
 
   <div class="controls">
@@ -177,7 +189,6 @@ button.control.playing { background: #6aff9c; }
 <div class="container section" id="dig2">
   <h2>Digitación – Ejercicio 2</h2>
   <div class="subtitle">Fórmula 1–3–4–2</div>
-
   <div class="circle" id="circle2"></div>
 
   <div class="controls">
@@ -209,23 +220,22 @@ button.control.playing { background: #6aff9c; }
     <input type="range" min="45" max="60" value="45" id="bpm">
   </div>
 
-  <button class="control" id="playBtn" onclick="toggleLetItBe()">Play / Stop</button>
+  <button class="control" id="playLet" onclick="toggleLet()">Play / Stop</button>
   <button class="control" onclick="back()">Volver</button>
 </div>
 
 </div>
 
 <script>
+/* NAVEGACIÓN */
 function show(id){
   stopAll();
   document.querySelectorAll('.section').forEach(s=>s.style.display='none');
   document.getElementById(id).style.display='block';
 }
-function back(){
-  stopAll();
-  show('menu');
-}
+function back(){ stopAll(); show('menu'); }
 
+/* AUDIO */
 let ctx=null;
 function getCtx(){
   if(!ctx) ctx=new (window.AudioContext||window.webkitAudioContext)();
@@ -241,6 +251,16 @@ function clickSound(vol){
   o.start(); o.stop(c.currentTime+.05);
 }
 
+/* CUENTA REGRESIVA */
+function countdown(cb){
+  let i=0;
+  const seq=[1,2,3,4];
+  const t=setInterval(()=>{
+    clickSound(.25);
+    if(++i===4){ clearInterval(t); cb(); }
+  },600);
+}
+
 /* DIGITACIÓN 1 */
 let t1=null,p1=false;
 const c1=document.getElementById("circle1");
@@ -248,7 +268,10 @@ const b1=document.getElementById("bpm1");
 const b1v=document.getElementById("bpm1Val");
 const pb1=document.getElementById("playDig1");
 b1.oninput=()=>b1v.innerText=b1.value;
-function toggleDig1(){p1?stopDig1():startDig1();}
+
+function toggleDig1(){
+  p1?stopDig1():countdown(startDig1);
+}
 function startDig1(){
   stopAll(); p1=true; pb1.classList.add("playing");
   pulse1(); t1=setInterval(pulse1,60000/b1.value);
@@ -257,7 +280,7 @@ function pulse1(){
   c1.classList.add("on"); clickSound(.2);
   setTimeout(()=>c1.classList.remove("on"),80);
 }
-function stopDig1(){clearInterval(t1);p1=false;pb1.classList.remove("playing");}
+function stopDig1(){ clearInterval(t1); p1=false; pb1.classList.remove("playing"); }
 
 /* DIGITACIÓN 2 */
 let t2=null,p2=false;
@@ -266,7 +289,10 @@ const b2=document.getElementById("bpm2");
 const b2v=document.getElementById("bpm2Val");
 const pb2=document.getElementById("playDig2");
 b2.oninput=()=>b2v.innerText=b2.value;
-function toggleDig2(){p2?stopDig2():startDig2();}
+
+function toggleDig2(){
+  p2?stopDig2():countdown(startDig2);
+}
 function startDig2(){
   stopAll(); p2=true; pb2.classList.add("playing");
   pulse2(); t2=setInterval(pulse2,60000/b2.value);
@@ -275,7 +301,7 @@ function pulse2(){
   c2.classList.add("on"); clickSound(.2);
   setTimeout(()=>c2.classList.remove("on"),80);
 }
-function stopDig2(){clearInterval(t2);p2=false;pb2.classList.remove("playing");}
+function stopDig2(){ clearInterval(t2); p2=false; pb2.classList.remove("playing"); }
 
 /* LET IT BE */
 let timer=null,beat=0,chordIndex=0,selectedChord=0,playing=false;
@@ -283,18 +309,22 @@ const bpm=document.getElementById("bpm");
 const bpmVal=document.getElementById("bpmVal");
 const countSpans=document.querySelectorAll(".count span");
 const chords=document.querySelectorAll(".chord");
-const playBtn=document.getElementById("playBtn");
+const playLet=document.getElementById("playLet");
 bpm.oninput=()=>bpmVal.innerText=bpm.value;
+
 chords.forEach((c,i)=>{
   c.onclick=()=>{
     chords.forEach(x=>x.classList.remove("selected"));
     c.classList.add("selected"); selectedChord=i;
   };
 });
-function toggleLetItBe(){playing?stopLetItBe():startLetItBe();}
-function startLetItBe(){
-  stopAll(); beat=0; chordIndex=selectedChord;
-  playing=true; playBtn.classList.add("playing");
+
+function toggleLet(){
+  playing?stopLet():countdown(startLet);
+}
+function startLet(){
+  stopAll(); playing=true; playLet.classList.add("playing");
+  beat=0; chordIndex=selectedChord;
   timer=setInterval(()=>{
     highlight(beat);
     if(beat===0){
@@ -308,13 +338,17 @@ function startLetItBe(){
 }
 function highlight(i){
   countSpans.forEach(s=>s.className="");
-  if(i===0)countSpans[0].classList.add("one");
+  if(i===0) countSpans[0].classList.add("one");
   else countSpans[i].classList.add("other");
 }
-function stopLetItBe(){clearInterval(timer);playing=false;playBtn.classList.remove("playing");}
+function stopLet(){
+  clearInterval(timer); playing=false;
+  playLet.classList.remove("playing");
+}
 
+/* STOP GENERAL */
 function stopAll(){
-  stopDig1(); stopDig2(); stopLetItBe();
+  stopDig1(); stopDig2(); stopLet();
 }
 </script>
 
